# ue5_mmo_server

./: .gitignore  LICENSE  README.md
Server/: CMakeLists.txt
Server/auth/src/: main.cpp
Server/chat/src/: main.cpp
Server/common/: auth.cfg  game.cfg
Server/common/include/: BaseServer.h  Log.h  Packets.h  RedisClient.h  Security.h  SocketServer.h  WebGuiServer.h
Server/common/src/: BaseServer.cpp  Config.cpp  Log.cpp  MySQLClient.cpp  RedisClient.cpp  Security.cpp  SocketServer.cpp  WebGuiServer.cpp
Server/common/webgui/: index_html.h
Server/game/include/: Entity.h  GameServer.h  Mob.h  MobManager.h  NPC.h  Player.h  ZoneManager.h
Server/game/src/: Entity.cpp  GameServer.cpp  MobManager.cpp  NPC.cpp  Player.cpp  ZoneManager.cpp  main.cpp
client/Plugins/MMOClient/Source/MMOClient/: MMOClient.Build.cs
client/Plugins/MMOClient/Source/MMOClient/Private/: MMOCharacter.cpp  MMOClient.cpp  MMOClientModule.cpp  MMOGameInstance.cpp  MMOPlayerMovementComponent.cpp  NetworkedEntityManager.cpp
client/Plugins/MMOClient/Source/MMOClient/Public/: MMOCharacter.h  MMOClient.h  MMOClientDelegates.h  MMOGameInstance.h  MMOPlayerMovementComponent.h  NetworkedEntityManager.h  Packets.h
